--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -276,7 +276,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/1/n11356564.md#1" target="_blank">共产暴政录：三区叛乱和侵华日军攻势协调进行</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7543764.md#1" target="_blank">军转干部感恩法轮大法给了第二次生命</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10085548.md#1" target="_blank">郑兢业：人吃与吃人（一 ）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/9/15/n2263295.md#1" target="_blank">调查报告：法轮功与健康</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
