--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -276,7 +276,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385671.md#1" target="_blank">嫁到韩国的中国媳妇：守住善就能走出困境</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/10/n10207223.md#1" target="_blank">共产暴政录：儿子告发母亲致其母被处决</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/24/n11136773.md#1" target="_blank">捷克参议院通过决议案 要求中共停止迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
