--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -20,7 +20,7 @@
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/30/n12442972.md#1" target="_blank">人微言轻？田夫智谏国君 楚人以歌感铭</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/30/n12442972.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/06/1508281257272483-150x120.jpg" align ="left"></a>周朝时期，楚庄王修建高台，役使百姓。有一位田夫自告奋勇，要去劝谏国君。同伴嘲笑他，你如茅草般低微，如何能说服国君，使他罢修高台？结果，庄王听罢田夫的言论，心甘情愿改变了心意，还下令释放了所有的役民。田夫的事迹被楚人编成歌谣，四处传唱……......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 5:34 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/15/n12476784.md#1" target="_blank">洋装</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/15/n12476784.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/05/1705191613462483-150x120.jpg" align ="left"></a>我曾经询问意识不太清醒的母亲。“你这辈子幸福吗？”母亲微笑点头了。我认为这样的母亲很厉害。尽管遭遇了许多艰辛，仍然可以说出自己的人生很幸福。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 5:21 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/24/n12427822.md#1" target="_blank">天堂梦（37）</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/24/n12427822.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/Heaven--150x120.jpg" align ="left"></a>共军采用最残酷的人海战，他们驱赶整连的士兵向桥头冲锋，除了桥前堆满着共军士兵尸体一无所获，部队严重减员，每个连只剩下50来人了，这时他们就用来支援参战的民兵补充。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 3:00 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12479879.md#1" target="_blank">曾预言川普当选 传教士：上帝派天使助连任</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12479879.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/ukraine-608141_1920-150x120.jpg" align ="left"></a>在美国即将举行2020年总统大选之际，曾预言川普（特朗普）在2016年当选总统的传教士暨预言家沃尔瑙（Lance Wallnau）表示，上帝已经派遣一群大天使协助川普获得连任。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 12:40 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484431.md#1" target="_blank">玉楼春．心要正</a><br></h3>常人自有常人乐，因有追求崇执著。 昊天之下可谋生，道理之中非算错。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月20日 12:07 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484700.md#1" target="_blank">诗歌：水之吟</a><br></h3> 抽刀断水水更流， 水能载舟亦覆舟。 以柔克刚誉千古， 涤垢荡污好身手。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 8:21 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484678.md#1" target="_blank">诗歌：秋</a><br></h3>花浮月影起薄烟 桂影婆娑香浸远 千载多少功名事 万古一夜一婵娟......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 12:14 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482948.md#1" target="_blank">诗歌：省</a><br></h3> 高楼独倚望天涯， 往事如烟细细查。 窗牖反光楼影树， 碧枝疑绽国槐花。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 12:09 AM			</td></tr>
