--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,6 +25,12 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>研究：许多染疫疗养院居民测试前无症状</h3>
+<p>根据周一发表的新研究，许多患有中共病毒的疗养院居民在测试前没有出现症状。</p>
+<p>美国布朗大学的伊丽莎白·怀特（Elizabeth White）及其同事在3月16日至7月15日之间，在350个熟练的护理机构研究了5,400名Covid-19患者。</p>
+<p>研究小组在《 JAMA Internal Medicine》杂志上报告说，其中40％以上没有症状。</p>
+<p>另有19％的病例是在接受检查之前没有任何症状，但是在接受检查后的14天内出现了症状。</p>
+<p>研究人员说，他们确定的大量无症状和症状前患有中共病毒的居民表明了通用检测的重要性。</p>
 <h3>英国每日新增病例逾18,000</h3>
 <p>根据英国政府周一公布的数据，在过去24小时内，英国记录了18,804例Covid-19病例。</p>
 <p>死亡人数从周日的67人上升至80人。</p>
@@ -289,7 +295,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/19/n9864134.md#1" target="_blank">毛泽东诗词宣扬暴力 为文革武斗输注能量</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/23/n10871477.md#1" target="_blank">感恩节 来自西方人的最美好心愿</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/15/n11045840.md#1" target="_blank">晓明：1968年广西阳朔杀惨案回顾</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
