--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -295,18 +295,18 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/15/n11045840.md#1" target="_blank">晓明：1968年广西阳朔杀惨案回顾</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/10/n2962557.md#1" target="_blank">鲜为人知的马克思之二：自大的马克思</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/8/2/n2983321.md#1" target="_blank">诚宇：捅破心灵的那层窗户纸</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/2/14/n11869946.md#1">大疫下解救有道 历史启示带您闯过中共肺炎</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/17/n12411954.md#1">东西方地狱见闻 邪淫者的悲声</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484638.md#1">【珍言真语】刘锐绍：林郑失宠 港官六神无主</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484332.md#1">【严真点评&amp;外交部大实话】拜登家丑闻 习南巡</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485056.md#1">【薇羽看世间】习近平南巡谈改革 走入死胡同</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484351.md#1">【大陆新闻解毒】时事小品：习南巡 人算不如天算</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481651.md#1">【新闻看点】习突返京或3原因 拜登家丑闻连爆</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a></li>
