--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -295,7 +295,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/10/n2962557.md#1" target="_blank">鲜为人知的马克思之二：自大的马克思</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/8/2/n2983321.md#1" target="_blank">诚宇：捅破心灵的那层窗户纸</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/17/n11660999.md#1" target="_blank">林辉：承天命演绎忠义豪情《水浒》为何被批？</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262924.md#1" target="_blank">参加纽约大集会 意大利小伙子找到人生意义</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
