--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -295,7 +295,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/10/n11512510.md#1" target="_blank">杨宁：从瑞典最豪华战舰沉没说中共的结局</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/7/22/n3922934.md#1" target="_blank">佚名：乱世中原谁最美？</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/26/n9772848.md#1" target="_blank">刘晓：救了毛一命的延安保卫处长凄惨下场</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/12/n9623089.md#1" target="_blank">坚持在卢森堡公园炼功 法国法轮功学员谈感受</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
